apps/dssp-targetnode-2/qat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetnode-2
  namespace: qat
  labels:
    app: dssp-targetnode-2
    backstage.io/kubernetes-id: dssp-targetnode-2
    environment: qat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetnode-2
  template:
    metadata:
      labels:
        app: dssp-targetnode-2
        backstage.io/kubernetes-id: dssp-targetnode-2
        environment: qat
    spec:
      containers:
        - name: dssp-targetnode-2
          image: chaitanyapandeygspann/dssp-targetnode-2:1.0.1
          ports:
            - containerPort: 3000
