apps/dssp-targetnode-2/qat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-targetnode-2
  namespace: qat
  labels:
    backstage.io/kubernetes-id: dssp-targetnode-2
    environment: qat
spec:
  selector:
    app: dssp-targetnode-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-targetnode-2-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-targetnode-2.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-targetnode-2
#             port:
#               number: 80
